# jumeaux-chauds

./: .gitignore  Makefile  README.md  build-clean-app.bat  docker-compose.yml  pyproject.toml  requirements.dashboard.txt  requirements.test.txt  requirements.txt
api/: __init__.py  deps.py  main.py  models.py  ws.py
config/: base.yaml  loader.py
consumer/: mqtt_to_timescale.py  schema.sql
dashboard/: __init__.py  api_client.py  app.py  ws_client.py
documents/: ANALYSE_TEMPS_SIMULE_2026_06_03.md  ARCHITECTURE_LAYERS.md  BUG_ANALYSIS_AND_FIXES.md  CHANGELOG_2026_06_03.md  DATA_FLOWS_SUMMARY.md  LAST_BUGS.md  PHASE_1_2_FIXES_COMPLETE.md  PHASE_8_4_IMPLEMENTATION_STATUS.md  PHASE_8_7_THERMAL_REFINEMENT_SPEC.md  QUICK_START.md  SPECS_MACHINE_STATUS_TRANSITIONS.md  SPECS_SIMULATION_SPEED_MULTIPLIER.md  TELEMETRY_FLOWS.md  TESTING_GUIDE.md  TRACE_REPLAY_GUIDE.md  roadmap.md  specifications.md  worklog.md
mqtt/: publisher.py
scripts/: analyze_thermal_risk.py  download_traces.py  generate_dataset.py  mqtt_listener.py  mqtt_observer.py  run_simulator.py
simulation/: cluster.py  machine.py  physics.py  scenarios.py  time.py
tests/: conftest.py  test_api_integration.py  test_config.py  test_consumer_integration.py  test_energy_conformity.py  test_fan_cooling_debug.py  test_load_profiles.py  test_machine.py  test_machine_commands.py  test_machine_telemetry.py  test_machine_yaml_integration.py  test_minimal_debug.py  test_mqtt_integration.py  test_phase_7_2_corrections.py  test_physics.py  test_simulated_time.py  test_speed_continuity.py  test_speed_multiplier.py  (+1 more)
(+44 files in other folders)
