[project]
name = "jumeaux-chauds"
version = "1.0.0"
description = "Simulateur de jumeaux numériques IoT"
authors = [{name = "Tristan Vanrullen"}]
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    # aiomqtt/__del__ tente loop.remove_writer() sur une boucle fermée en teardown de test.
    # N'affecte pas le code de production (boucle asyncio toujours active en runtime).
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
